@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-40.1
-Date: 2010-06-25
+Version: 0.999375-41
+Date: 2010-07-02
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
