@@ -1,5 +1,5 @@
 
-R version 2.11.1 Patched (2010-06-06 r52218)
+R version 2.11.1 Patched (2010-07-01 r52425)
 Copyright (C) 2010 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -105,6 +105,8 @@ m < m for none: ok
 > mnr[] <- v
 > msr[] <- v # [<- "sparse" -- not very sensical; did fail w/o a message
 diagnosing replTmat(x,i,j,v): nargs()= 3; missing(i,j)= (0,1)
+> z <- msr; z[] <- 0
+> zz <- as(array(0, dim(z)), "sparseMatrix")
 > a.m <- as(mnr,"matrix")
 > stopifnot(identical(mn["rc", "D"], mn[3,4]), mn[3,4] == 24,
 + 	  identical(mn[, "A"], mn[,1]), mn[,1] == 1:7,
@@ -117,8 +119,10 @@ diagnosing replTmat(x,i,j,v): nargs()= 3; missing(i,j)= (0,1)
 + 	  identical(colnames(mn[,cj <- c("B","D")]), cj),
 + 	  identical(colnames(ms[,cj]), cj),
 + 	  identical(a.m, as(msr,"matrix")),
++ 	  identical(unname(z), zz),
 + 	  identical(a.m, array(v, dim=dim(mn), dimnames=dimnames(mn)))
 + 	  )
+> 
 > 
 > ## Printing sparse colnames:
 > ms[sample(28, 20)] <- 0
@@ -1347,7 +1351,7 @@ attr(,"package")
 + 	  identical(thCol,  fx[,5762]))
 > 
 > cat('Time elapsed: ', (.pt <- proc.time()),'\n') # "stats"
-Time elapsed:  19.063 0.878 20.033 0 0 
+Time elapsed:  17.26 0.77 18.014 0 0 
 > ##
 > cat("checkMatrix() of all: \n---------\n")
 checkMatrix() of all: 
@@ -1522,10 +1526,10 @@ suboptimal 'Arith' implementation of  'dsC*  o  dsC*'
 x.x. 
 suboptimal 'Arith' implementation of  'dsC*  o  dsC*'
 suboptimal 'Arith' implementation of  'dsC*  o  dsC*'
+zz 
 > cat('Time elapsed: ', proc.time() - .pt,'\n') # "stats"
-Time elapsed:  14.661 0.335 15.005 0 0 
+Time elapsed:  14.3 0.22 14.521 0 0 
 > 
 > if(!interactive()) warnings()
 NULL
-> 
 > 
